; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_intel_menlow.c_aux0_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_intel_menlow.c_aux0_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.intel_menlow_attribute = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @aux0_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aux0_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.intel_menlow_attribute*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.device_attribute*, %struct.device_attribute** %5, align 8
  %11 = call %struct.intel_menlow_attribute* @to_intel_menlow_attr(%struct.device_attribute* %10)
  store %struct.intel_menlow_attribute* %11, %struct.intel_menlow_attribute** %7, align 8
  %12 = load %struct.intel_menlow_attribute*, %struct.intel_menlow_attribute** %7, align 8
  %13 = getelementptr inbounds %struct.intel_menlow_attribute, %struct.intel_menlow_attribute* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @sensor_get_auxtrip(i32 %14, i32 0, i64* %8)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %9, align 4
  br label %25

20:                                               ; preds = %3
  %21 = load i8*, i8** %6, align 8
  %22 = load i64, i64* %8, align 8
  %23 = call i32 @KELVIN_TO_CELSIUS(i64 %22)
  %24 = call i32 @sprintf(i8* %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %23)
  br label %25

25:                                               ; preds = %20, %18
  %26 = phi i32 [ %19, %18 ], [ %24, %20 ]
  ret i32 %26
}

declare dso_local %struct.intel_menlow_attribute* @to_intel_menlow_attr(%struct.device_attribute*) #1

declare dso_local i32 @sensor_get_auxtrip(i32, i32, i64*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @KELVIN_TO_CELSIUS(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
